--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Общий Словарь</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/public/style.css">
 </head>
 <body>
     <div class="container">
@@ -20,4 +20,5 @@
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
